--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,7 +6,8 @@ set -g default-terminal 'tmux-256color'
 set -g prefix C-s
 setw -g mode-keys vi
 
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+set -s user-keys[0] "\e[F"
+bind-key -n User0 run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 set -g @tmux-gruvbox "light"
 
