--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -25,6 +25,7 @@ active_tab_title_template none
 active_tab_font_style   bold-italic
 inactive_tab_font_style normal
 
+map ctrl+shift+f send_text all \x1b[F
 
 # BEGIN_KITTY_THEME
 # Gruvbox Light
