--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,3 +36,7 @@ bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
 set-option -g status-position top
+bind-key -r C-h resize-pane -L
+bind-key -r C-j resize-pane -D
+bind-key -r C-k resize-pane -U
+bind-key -r C-l resize-pane -R
