hyprlock added w/ gruvbox-light

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -27,3 +27,5 @@ bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t
 bind = SUPER SHIFT, B, exec, dogear list | $menu --dmenu --prompt "Bookmarks" | dogear open
 bind = SUPER, D, exec, dogear grab
 bind = SUPER CTRL, B, exec, dogear edit
+
+bindd = SUPER CTRL, L, Lock the screen, exec, hyprlock
