fix(system): bunch of fixes

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -3,7 +3,7 @@ $wallpaperSetter = set-wallpaper
 $menu = wofi
 
 # Exit the hyprland
-bindd = SUPER CTRL, Delete, Powermenu, exec, hyprctl kill hyprland
+bindd = SUPER CTRL, Delete, Shutdown computer, exec, shutdown now
 
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu --show drun
@@ -28,4 +28,4 @@ bind = SUPER SHIFT, B, exec, dogear list | $menu --dmenu --prompt "Bookmarks" | 
 bind = SUPER, D, exec, dogear grab
 bind = SUPER CTRL, B, exec, dogear edit
 
-bindd = SUPER CTRL, L, Lock the screen, exec, hyprlock
+bindd = SUPER CTRL SHIFT, L, Lock the screen, exec, hyprlock
