--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,9 +9,17 @@ setw -g mode-keys vi
 set -s user-keys[0] "\e[F"
 bind-key -n User0 run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
+# Set the theme mode
 set -g @tmux-gruvbox "light"
 
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# Enable cursor shape and blinking support
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+# Copy Mode (Selection) visibility for Light Theme
+# This sets the selection to have dark text (#3c3836) on an orange background (#fabd2f)
+set -g mode-style "fg=#3c3836,bg=#fabd2f"
+
+# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 run ~/.config/tmux/plugins/tmux-gruvbox/gruvbox-tpm.tmux
 
 # Smart pane switching with awareness of Vim splits.
@@ -36,6 +44,7 @@ bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
 set-option -g status-position top
+
 bind-key -r C-h resize-pane -L
 bind-key -r C-j resize-pane -D
 bind-key -r C-k resize-pane -U
