--- a/hyprland/.config/hypr/bindings/clipboard.conf
+++ b/hyprland/.config/hypr/bindings/clipboard.conf
@@ -1,9 +1,6 @@
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-
-# Copy / paste
-bindd = SUPER, V, Select what to copy from the clipboard history, exec, cliphist-wofi
-# Delete from history
-bindd = SUPER CONTROL, V, Delete from the clipboard history, exec, cliphist list | wofi --dmenu | cliphist delete
-
-bindd = SUPER CONTROL, D, Paste the silent thingy, exec, type-silent
+$menu = walker
+# Copy / Paste
+bindd = SUPER, C, Universal copy, sendshortcut, CTRL, Insert,
+bindd = SUPER, V, Universal paste, sendshortcut, SHIFT, Insert,
+bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
+bindd = SUPER CTRL, V, Clipboard manager, exec, $menu -m clipboard
