--- a/kitty/.config/kitty/fonts.conf
+++ b/kitty/.config/kitty/fonts.conf
@@ -14,10 +14,10 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family      CaskaydiaCove Nerd Font Mono
-bold_font        CaskaydiaCove Nerd Font Mono
-italic_font      CaskaydiaCove Nerd Font Mono
-bold_italic_font CaskaydiaCove Nerd Font Mono
+font_family      Departure Mono
+bold_font        Departure Mono
+italic_font      Departure Mono
+bold_italic_font Departure Mono
 
 font_size 13.0
 
