--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -1,22 +1,18 @@
 # Variables
-$wallpaperSetter = set-wallpaper
-$menu = wofi
+$menu = walker
 
 # Exit the hyprland
 bindd = SUPER CTRL, Delete, Shutdown computer, exec, shutdown now
 
 # Menus
-bindd = SUPER, P, Launch apps, exec, $menu --show drun
+bindd = SUPER, P, Launch apps, exec, $menu
 
 # Screenshot
 bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -o ~/pix/ss/
 bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
 
 # Pick emojis
-bindd = SUPER CTRL, E, Select emojis, exec, emoji-wofi
-
-# Set wallpaper
-bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
+bindd = SUPER CTRL, E, Select emojis, exec, $menu -m symbols
 
 # Notifications
 bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
@@ -24,7 +20,7 @@ bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --a
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
 
 # Dogear Bookmarks
-bind = SUPER SHIFT, B, exec, dogear list | $menu --dmenu --prompt "Bookmarks" | dogear open
+bind = SUPER SHIFT, B, exec, dogear list | $menu --dmenu | dogear open
 bind = SUPER, D, exec, dogear grab
 bind = SUPER CTRL, B, exec, dogear edit
 
