fix(*ypr) : windowrulev2 is deprecated

--- a/hyprland/.config/hypr/windows.conf
+++ b/hyprland/.config/hypr/windows.conf
@@ -2,10 +2,10 @@
 windowrule = scroll_touchpad 1.5 on, match:class (Alacritty|kitty)
 windowrule = scroll_touchpad 0.2 on, match:class com.mitchellh.ghostty
 
-# Ignore maximize requests - Yeni 'match:' ve aksiyon formatı
-windowrulev2 = suppress_event maximize on, match:class .*
+# Ignore maximize requests - 'windowrulev2' yerine 'windowrule'
+windowrule = suppress_event maximize, match:class .*
 
-# XWayland Dragging fix - 'nofocus' yerine 'no_focus' ve çoklu seçiciler
-windowrulev2 = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0
+# XWayland Dragging fix
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland true, match:float true, match:fullscreen false, match:pin false
 
 source = ~/.config/hypr/apps.conf
